<resources>
    <string name="app_name">FoodHub</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ip_address">13.235.250.119</string>
    <string name="token">ddfaf04fbc2fb5</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="add_to_cart_btn">Add</string>
    <string name="proceed_to_cart_btn">Proceed to Cart</string>
    <string name="choose_from_menu_listed_below">Choose from menu listed below:</string>
    <string name="ordering_from">Ordering From: </string>
    <string name="place_order">Place Order (Rs)</string>
    <string name="shared_preferences">RestaurantPreference</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders :</string>
    <string name="question1">Q1. What are the login hours?</string>
    <string name="answer1">A1. The login hours are flexible. You can choose to login anytime depending on your availability.</string>
    <string name="question2">Q2. What happens to restaurants with poor Hygiene Ratings?</string>
    <string name="answer2">A2. The Hygiene Ratings system will help consumers choose where to eat from by giving them information about the hygiene standards. It isn’t easy to judge hygiene standards by appearances alone, so the rating gives you some idea of what’s going on in the kitchen, or behind closed doors.</string>
    <string name="question3">Q3. Why is FoodHub doing this?</string>
    <string name="answer3">A3. At FoodHub we strive to add value to your business. We understand the challenges you face on a daily basis in sourcing the best quality packaging material. FoodHub Packaging Assist is to take care of all your packaging needs.</string>
    <string name="question4">Q4. How are you guys different?</string>
    <string name="answer4">A4. Best products - We only list the products which have passed our tests and are the best suitable for delivery. They will help in giving a better consumer experience, so you can get repeated orders. Best prices - We have negotiated rates with our distributors exclusive for FoodHub Restaurant. Convenience - No need to haggle for prices. No need to follow-up on delivery. We track all orders to ensure you have a hassle free experience.</string>
    <string name="can_t_find_any_restaurant_with_that_name">Can\'t find any Restaurant with that name!</string>
    <string name="no_orders_placed">No Orders Placed Yet</string>
    <string name="foodhub">FoodHub</string>
    <string name="applogo">appLogo</string>
    <string name="food_hub">Food Hub</string>
    <string name="user">user</string>
    <string name="username">UserName</string>
    <string name="_91_9999889988">+91 9999889988</string>
    <string name="search_restaurants">Search Restaurants</string>
    <string name="submit">Submit</string>
    <string name="confirm_password_min_6">Confirm Password (Min 6)</string>
    <string name="new_password_min_6">New Password (Min 6)</string>
    <string name="otp_min_4">OTP (Min 4)</string>
    <string name="enter_the_received_otp_below">Enter the received OTP below</string>
    <string name="next">Next</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_registered_mobile_number_and_email_below">Enter your registered mobile number and email below:</string>
    <string name="mobile_number_10_digits">Mobile Number(10 digits)</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an account? Sign up now</string>
    <string name="password">Password</string>
    <string name="name_min_3_characters">Name (Min 3 characters)</string>
    <string name="mobile_number_10_digits_2">Mobile Number (10 digits)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_min_6">Password(Min 6)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="_22_12_2018">22/12/2018</string>
    <string name="pind_tadka">Pind Tadka</string>
    <string name="rs_200">Rs.200</string>
    <string name="panner_masala">Panner Masala</string>
    <string name="_1">1</string>
    <string name="cost_low_to_high">Cost(Low to High)</string>
    <string name="cost_high_to_low">Cost(High to Low)</string>
    <string name="rating">Rating</string>
</resources>