<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLayout"
    tools:context=".fragment.ForgotPasswordFragment">

    <RelativeLayout
        android:id="@+id/forgotPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:elevation="1dp"
        android:visibility="invisible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/enter_the_received_otp_below"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/round_border_for_view"
            android:drawablePadding="4dp"
            android:hint="@string/otp_min_4"
            android:inputType="number|text"
            android:maxLength="4"
            android:maxLines="1"
            android:padding="10dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/round_border_for_view"
            android:drawablePadding="4dp"
            android:hint="@string/new_password_min_6"
            android:inputType="number|numberPassword"
            android:maxLength="8"
            android:maxLines="1"
            android:padding="10dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_border_for_view"
            android:drawablePadding="4dp"
            android:hint="@string/confirm_password_min_6"
            android:inputType="number|numberPassword"
            android:maxLength="8"
            android:maxLines="1"
            android:padding="10dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/submit"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>